[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Game menu/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/Game sounds/IntroTheme.ogg" type="AudioStream" id=2]
[ext_resource path="res://src/Game menu/LevelSelect.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Game menu/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Game menu assets/PUZZLE BOX LOGO.png" type="Texture" id=5]
[ext_resource path="res://assets/Game menu Fonts/Hysterix-8Wg2.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Game menu assets/Bakgrunn.png" type="Texture" id=7]
[ext_resource path="res://src/CutScenes/CutScene_intro.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.5583, 141.74 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true
bus = "Background music"

[node name="LevelSelect" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Options" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.031
anchor_top = 0.053
anchor_right = 0.969
anchor_bottom = 0.907
margin_left = 0.255999
margin_top = 0.199999
margin_right = -0.256042
margin_bottom = -0.200012

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1800.0
margin_bottom = 154.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 158.0
margin_right = 1800.0
margin_bottom = 1024.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_right = 373.0
margin_bottom = 866.0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow/CenterContainer"]
margin_top = 339.0
margin_right = 373.0
margin_bottom = 527.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="newGame" type="Button" parent="Menu/CenterRow/CenterContainer/Buttons"]
margin_right = 373.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "NEW GAME"

[node name="LevelSelect" type="Button" parent="Menu/CenterRow/CenterContainer/Buttons"]
margin_top = 48.0
margin_right = 373.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 2 )
text = "Level select"

[node name="Options" type="Button" parent="Menu/CenterRow/CenterContainer/Buttons"]
margin_top = 96.0
margin_right = 373.0
margin_bottom = 140.0
focus_mode = 1
custom_fonts/font = SubResource( 3 )
text = "Options"

[node name="Quit" type="Button" parent="Menu/CenterRow/CenterContainer/Buttons"]
margin_top = 144.0
margin_right = 373.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Bakgrunn" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 1613.58, 764.697 )
scale = Vector2( 1.25, 1.19 )
texture = ExtResource( 7 )

[node name="CutScene_intro" parent="." instance=ExtResource( 8 )]
position = Vector2( 295.916, 859.27 )
scale = Vector2( 1.1, 1.1 )

[node name="PlayerStop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerStop"]
position = Vector2( 1809.07, 898.806 )
shape = SubResource( 5 )
[connection signal="pressed" from="Menu/CenterRow/CenterContainer/Buttons/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/CenterContainer/Buttons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Menu/CenterRow/CenterContainer/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/CenterContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="body_entered" from="PlayerStop" to="." method="_on_PlayerStop_body_entered"]
